Update listings and generated pages

--- a/listing-123112.html
+++ b/listing-123112.html
@@ -2,12 +2,13 @@
 <html data-wf-page="67be6469de122ba6ca673237" data-wf-site="6642c0e4ea9730ea7938fcb1">
   <head>
     <meta charset="utf-8" />
-    <title>100 Dufay Roadddd - Listing #11</title>
+    <title>2832 Chippawa Road - Listing #123112</title>
     <meta content="listing" property="og:title" />
     <meta content="listing" property="twitter:title" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="/css/webflow-style.css" rel="stylesheet" type="text/css" />
     <link href="/css/listing.css" rel="stylesheet" type="text/css" />
+    <link href="/css/footer.css" rel="stylesheet" type="text/css" />  
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -32,7 +33,7 @@
     document.addEventListener('DOMContentLoaded', function() {
     emailjs.init('EESFEko27dm9qY7u2'); // Replace with your EmailJS public key
 
-    const address = '100 Dufay Roadddd'; // Pulled from update_pages.py
+    const address = '2832 Chippawa Road'; // Pulled from update_pages.py
 
     // Modal toggle functions
     function openModal(modalId) {
@@ -89,7 +90,7 @@
             from_email: data.email,
             phone: data.phone,
             message: data.message,
-            subject: `Details Request for $100 Dufay Roadddd`
+            subject: `Details Request for $2832 Chippawa Road`
         }).then(() => {
             this.reset();
             this.querySelector('.modal-success').style.display = 'block';
@@ -122,7 +123,7 @@
             phone: data.phone,
             preferred_time: data.preferredTime,
             preferred_date: data.preferredDate,
-            subject: `Showing Request for $100 Dufay Roadddd`
+            subject: `Showing Request for $2832 Chippawa Road`
         }).then(() => {
             this.reset();
             this.querySelector('.modal-success').style.display = 'block';
@@ -295,47 +296,47 @@
 
     <div class="div-block-48">
         <h1 class="heading-26">✦</h1>
-        <h1 class="heading-25 listmainheader"><strong class="bold-text-2 listingtoptitleaddress">100 Dufay Roadddd</strong></h1>
+        <h1 class="heading-25 listmainheader"><strong class="bold-text-2 listingtoptitleaddress">2832 Chippawa Road</strong></h1>
     </div>
     <div class="div-block-79">
         <div class="photo-showcase">
-            <img src="listings/11/thumbnail.jpg" class="main-image" id="mainImage" alt="Main Property Image">
+            <img src="listings/123112/thumbnail.jpg" class="main-image" id="mainImage" alt="Main Property Image">
             <div class="thumbnail-container" id="thumbnailContainer">
                 <!-- Thumbnails will be inserted here -->
             </div>
         </div>
     </div>
     <div class="w-layout-blockcontainer container-19 w-container">
-        <h1 class="heading-40 listhouseadrs" style="margin-right: 15px;"><strong class="bold-text-3">100 Dufay Roadddd</strong></h1>
-        <h1 class="heading-41 listcityprovpin">BRAMPTON, ON L7A 4S3s</h1>
-        <h1 class="heading-40 listprice" style="margin-left: 10px;">$34,234</h1>
-        <h1 class="heading-42 listlistingno">LISTING #11</h1>
+        <h1 class="heading-40 listhouseadrs" style="margin-right: 15px;"><strong class="bold-text-3">2832 Chippawa Road</strong></h1>
+        <h1 class="heading-41 listcityprovpin">WINDSOR, ON L9A 4S2</h1>
+        <h1 class="heading-40 listprice" style="margin-left: 10px;">$785,999</h1>
+        <h1 class="heading-42 listlistingno">LISTING #123112</h1>
         <div class="div-block-80">
             <h1 class="heading-43">BEDS</h1>
-            <h1 class="heading-44 listbeds">1</h1>
+            <h1 class="heading-44 listbeds">4</h1>
             <h1 class="heading-45">BATHS</h1>
-            <h1 class="heading-46 listbaths">2</h1>
+            <h1 class="heading-46 listbaths">3</h1>
             <h1 class="heading-47">GARAGE</h1>
-            <h1 class="heading-48 listgarage">3</h1>
+            <h1 class="heading-48 listgarage">2</h1>
             <h1 class="heading-49">SQFT</h1>
-            <h1 class="heading-50 listsqft">23</h1>
+            <h1 class="heading-50 listsqft">2200</h1>
         </div>
         <a href="#" class="button-3 hb2button listingreqdetbtn w-button">REQUEST DETAILS</a>
         <a href="#" class="button-3 hb2button listingschedviewbtn w-button">SCHEDULE A SHOWING</a>
         <div class="divider-main"></div>
         <h1 class="heading-51">ABOUT THIS PROPERTY</h1>
-        <p class="paragraph-14 listaboutprop">dsfsdfsd</p>
+        <p class="paragraph-14 listaboutprop">~insert about here~</p>
         <div class="divider-main"></div>
         <h1 class="heading-51">PROPERTY DETAILS</h1>
         <div class="div-block-81">
             <h1 class="heading-52">Community</h1>
-            <h1 class="heading-52 listpropcomm">sdfsdfs</h1>
+            <h1 class="heading-52 listpropcomm">Sandwich Town</h1>
             <h1 class="heading-52">Area</h1>
-            <h1 class="heading-52 listarea">sdfs</h1>
+            <h1 class="heading-52 listarea">Sandwich</h1>
             <h1 class="heading-52">Cross Street</h1>
-            <h1 class="heading-52 listcrossstreet">sdfsdf</h1>
+            <h1 class="heading-52 listcrossstreet">Main and Ambassador</h1>
             <h1 class="heading-52">City Area</h1>
-            <h1 class="heading-52 listcityarea">sdfsdf</h1>
+            <h1 class="heading-52 listcityarea">Windsor</h1>
         </div>
     </div>
     <div class="divider-main"></div>
@@ -346,7 +347,7 @@
           <div class="rt-contact-two-form-main">
               <div class="rt-contact-two-form-title">
                   <h2 class="heading-53">INTERESTED IN</h2>
-                  <h1 class="heading-54"><strong class="bold-text">100 Dufay Roadddd, BRAMPTON, ON L7A 4S3s</strong></h1>
+                  <h1 class="heading-54"><strong class="bold-text">2832 Chippawa Road, WINDSOR, ON L9A 4S2</strong></h1>
               </div>
               <div class="rt-contact-two-form-wrapper-3">
                   <div class="w-form">
@@ -389,28 +390,37 @@
       </div>
   </section>
 
-    <footer class="uui-footer07_component">
-      <div class="uui-page-padding-2">
-        <div class="uui-container-large-2">
-          <div class="uui-padding-vertical-xlarge">
-            <div class="uui-footer07_top-wrapper"><a href="#" id="w-node-_713c3ffb-bb9e-1cc4-db40-828bb3c4682e-b3c46829" class="uui-footer07_logo-link w-nav-brand">
-                <div class="uui-logo_component"><img src="/images/logo4.png" loading="lazy" data-w-id="713c3ffb-bb9e-1cc4-db40-828bb3c46830" alt="Untitled UI logotext" class="uui-logo_logotype" /><img src="/images/untitled-ui-logo.png" loading="lazy" alt="Logo" class="uui-logo_image" /></div>
+  <footer class="uui-footer07_component">
+    <div class="uui-page-padding-2">
+      <div class="uui-container-large-2">
+        <div class="uui-padding-vertical-xlarge">
+          <div class="uui-footer07_top-wrapper">
+            <a href="#" class="uui-footer07_logo-link w-nav-brand">
+              <div class="uui-logo_component">
+                <img src="/images/logo4.png" loading="lazy" alt="RealtorMKS Logo" class="uui-logo_logotype" />
+                <img src="/images/untitled-ui-logo.png" loading="lazy" alt="Logo" class="uui-logo_image" />
+              </div>
+            </a>
+            <div class="w-layout-grid uui-footer07_link-list">
+              <a href="/homeevaluation.html" class="uui-footer07_link w-inline-block">
+                <div class="text-block-23">HOME EVALUATION</div>
               </a>
-              <div data-w-id="713c3ffb-bb9e-1cc4-db40-828bb3c46832" class="w-layout-grid uui-footer07_link-list"><a href="/homeevaluation.html" class="uui-footer07_link w-inline-block">
-                  <div class="text-block-23">HOME EVALUATION</div>
-                </a><a href="/buying.html" class="uui-footer07_link w-inline-block">
-                  <div class="text-block-24">BUYING</div>
-                </a><a href="/properties.html" class="uui-footer07_link w-inline-block">
-                  <div class="text-block-25">PROPERTIES</div>
-                </a><a href="/about.html" class="uui-footer07_link w-inline-block">
-                  <div class="text-block-27">ABOUT</div>
-                </a><a href="/contact-us.html" class="uui-footer07_link w-inline-block">
-                  <div class="text-block-28">CONTACT</div>
-                </a></div>
+              <a href="/buying.html" class="uui-footer07_link w-inline-block">
+                <div class="text-block-24">BUYING</div>
+              </a>
+              <a href="/properties.html" class="uui-footer07_link w-inline-block">
+                <div class="text-block-25">PROPERTIES</div>
+              </a>
+              <a href="/about.html" class="uui-footer07_link w-inline-block">
+                <div class="text-block-27">ABOUT</div>
+              </a>
+              <a href="/contact-us.html" class="uui-footer07_link w-inline-block">
+                <div class="text-block-28">CONTACT</div>
+              </a>
             </div>
-            <div data-w-id="713c3ffb-bb9e-1cc4-db40-828bb3c46842" class="uui-footer07_bottom-wrapper">
-              <div class="uui-text-size-small text-color-gray500">© 2025 RealtorMKS. All rights reserved.</div>
-            </div>
+          </div>
+          <div class="uui-footer07_bottom-wrapper">
+            <div class="uui-text-size-small text-color-gray500">© 2025 RealtorMKS. All rights reserved.</div>
           </div>
         </div>
       </div>
@@ -454,7 +464,7 @@
               <option value="4:00 PM">4:00 PM</option>
               <option value="5:00 PM">5:00 PM</option>
           </select>
-          <input type="date" name="preferredDate" required min="2025-03-12">
+          <input type="date" name="preferredDate" required min="2025-03-13">
           <button type="submit">Schedule Showing</button>
           <div class="modal-success">Showing scheduled successfully!</div>
           <div class="modal-error">Failed to schedule. Try again.</div>
@@ -500,7 +510,7 @@
                     phone: form.phone.value.trim(),
                     message: form.message.value.trim()
                 };
-                const address = '100 Dufay Roadddd, BRAMPTON, ON L7A 4S3s';
+                const address = '2832 Chippawa Road, WINDSOR, ON L9A 4S2';
     
                 // Custom validation
                 if (!data.name || !data.email || !data.phone) {
@@ -526,7 +536,7 @@
                     from_email: data.email,
                     phone: data.phone,
                     message: data.message,
-                    subject: `Inquiry for $100 Dufay Roadddd`
+                    subject: `Inquiry for $2832 Chippawa Road`
                 })
                 .then((response) => {
                     console.log('Email sent:', response);
@@ -547,7 +557,7 @@
     </script>
 
     <script>
-      const photos = ["listings/11/thumbnail.jpg", ...["listings/11/abstractBG.jpg"]]; // Include main thumbnail in the array
+      const photos = ["listings/123112/thumbnail.jpg", ...["listings/123112/matrixBG.gif", "listings/123112/mjy15.jpg"]]; // Include main thumbnail in the array
       const mainImage = document.getElementById('mainImage');
       const thumbnailContainer = document.getElementById('thumbnailContainer');
       let currentIndex = 0;
