--- a/listings.html
+++ b/listings.html
@@ -7,6 +7,7 @@
     <meta content="Listings" property="twitter:title" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="/css/webflow-style.css" rel="stylesheet" type="text/css" />
+    <link href="/css/footer.css" rel="stylesheet" type="text/css" />  
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -153,28 +154,37 @@
     </div>
   </div>
 
-    <footer class="uui-footer07_component">
-      <div class="uui-page-padding-2">
-        <div class="uui-container-large-2">
-          <div class="uui-padding-vertical-xlarge">
-            <div class="uui-footer07_top-wrapper"><a href="#" id="w-node-_713c3ffb-bb9e-1cc4-db40-828bb3c4682e-b3c46829" class="uui-footer07_logo-link w-nav-brand">
-                <div class="uui-logo_component"><img src="/images/logo4.png" loading="lazy" data-w-id="713c3ffb-bb9e-1cc4-db40-828bb3c46830" alt="Untitled UI logotext" class="uui-logo_logotype" /><img src="/images/untitled-ui-logo.png" loading="lazy" alt="Logo" class="uui-logo_image" /></div>
+  <footer class="uui-footer07_component">
+    <div class="uui-page-padding-2">
+      <div class="uui-container-large-2">
+        <div class="uui-padding-vertical-xlarge">
+          <div class="uui-footer07_top-wrapper">
+            <a href="#" class="uui-footer07_logo-link w-nav-brand">
+              <div class="uui-logo_component">
+                <img src="/images/logo4.png" loading="lazy" alt="RealtorMKS Logo" class="uui-logo_logotype" />
+                <img src="/images/untitled-ui-logo.png" loading="lazy" alt="Logo" class="uui-logo_image" />
+              </div>
+            </a>
+            <div class="w-layout-grid uui-footer07_link-list">
+              <a href="/homeevaluation.html" class="uui-footer07_link w-inline-block">
+                <div class="text-block-23">HOME EVALUATION</div>
               </a>
-              <div data-w-id="713c3ffb-bb9e-1cc4-db40-828bb3c46832" class="w-layout-grid uui-footer07_link-list"><a href="/homeevaluation.html" class="uui-footer07_link w-inline-block">
-                  <div class="text-block-23">HOME EVALUATION</div>
-                </a><a href="/buying.html" class="uui-footer07_link w-inline-block">
-                  <div class="text-block-24">BUYING</div>
-                </a><a href="/properties.html" class="uui-footer07_link w-inline-block">
-                  <div class="text-block-25">PROPERTIES</div>
-                </a><a href="/about.html" class="uui-footer07_link w-inline-block">
-                  <div class="text-block-27">ABOUT</div>
-                </a><a href="/contact-us.html" class="uui-footer07_link w-inline-block">
-                  <div class="text-block-28">CONTACT</div>
-                </a></div>
+              <a href="/buying.html" class="uui-footer07_link w-inline-block">
+                <div class="text-block-24">BUYING</div>
+              </a>
+              <a href="/properties.html" class="uui-footer07_link w-inline-block">
+                <div class="text-block-25">PROPERTIES</div>
+              </a>
+              <a href="/about.html" class="uui-footer07_link w-inline-block">
+                <div class="text-block-27">ABOUT</div>
+              </a>
+              <a href="/contact-us.html" class="uui-footer07_link w-inline-block">
+                <div class="text-block-28">CONTACT</div>
+              </a>
             </div>
-            <div data-w-id="713c3ffb-bb9e-1cc4-db40-828bb3c46842" class="uui-footer07_bottom-wrapper">
-              <div class="uui-text-size-small text-color-gray500">© 2025 RealtorMKS. All rights reserved.</div>
-            </div>
+          </div>
+          <div class="uui-footer07_bottom-wrapper">
+            <div class="uui-text-size-small text-color-gray500">© 2025 RealtorMKS. All rights reserved.</div>
           </div>
         </div>
       </div>
@@ -182,9 +192,9 @@
 
     <script>
         console.log('Script running');
-        console.log('Raw listingsJson:', [{"about": "dfsfsdf", "address": "100 Dufay Road", "area": "sdf", "baths": "4", "beds": "4", "city": "BRAMPTON", "cityArea": "sf", "community": "sdf", "crossStreet": "sdf", "featured": true, "garages": "4", "listingNo": "1212", "photos": ["listings/1212/360_F_93963870_VnTvQJwqzcI1VuGfS1M9CNl5osnrCuGX.jpg", "listings/1212/12740.jpg", "listings/1212/abstractBG.jpg", "listings/1212/headshot.png"], "postalCode": "L7A 4S3", "price": "$2.00", "propertyType": "condo", "sqft": "45453", "thumbnail": "listings/1212/thumbnail.jpg"}, {"about": "sdfsdf", "address": "A-2/270", "area": "sdfsdf", "baths": "23", "beds": "23", "city": "NEW DELHI", "cityArea": "sdfsd", "community": "sdfsdf", "crossStreet": "sdfsdf", "featured": true, "garages": "23", "listingNo": "34432", "photos": ["listings/34432/360_F_93963870_VnTvQJwqzcI1VuGfS1M9CNl5osnrCuGX.jpg", "listings/34432/12740.jpg"], "postalCode": "110063", "price": "3434", "propertyType": "House", "sqft": "2323", "thumbnail": "listings/34432/thumbnail.jpg"}, {"address": "53 lockpeed", "city": "CHENNAI", "postalCode": "L7A 3G4", "price": "999999", "propertyType": "Townhouse", "listingNo": "2131", "listingType": "For Sale", "beds": "1", "baths": "2", "garages": "3", "sqft": "1213", "about": "sdsdfsdfsdfs", "community": "dsfs", "area": "sdfsdf", "crossStreet": "sdfsdf", "cityArea": "sdfsdf", "featured": false, "thumbnail": "listings/2131/thumbnail.jpg", "photos": ["listings/2131/360_F_93963870_VnTvQJwqzcI1VuGfS1M9CNl5osnrCuGX.jpg", "listings/2131/12740.jpg"]}, {"address": "33423", "city": "DSFSFSDF", "postalCode": "df34", "price": "df34234", "propertyType": "sdfsdfsd", "listingNo": "3423", "listingType": "For Sale", "beds": "3", "baths": "34", "garages": "34", "sqft": "3242", "about": "dfsdf", "community": "sdfs", "area": "sdfs", "crossStreet": "sdfsdf", "cityArea": "sdfsd", "featured": false, "thumbnail": "listings/3423/thumbnail.jpg", "photos": ["listings/3423/headshot.png", "listings/3423/headshotBW.png"]}, {"address": "100 Dufay Roadddd", "city": "BRAMPTON", "postalCode": "L7A 4S3s", "price": "34234", "propertyType": "townhouse", "listingNo": "11", "listingType": "For Sale", "beds": "1", "baths": "2", "garages": "3", "sqft": "23", "about": "dsfsdfsd", "community": "sdfsdfs", "area": "sdfs", "crossStreet": "sdfsdf", "cityArea": "sdfsdf", "featured": false, "thumbnail": "listings/11/thumbnail.jpg", "photos": ["listings/11/abstractBG.jpg"]}]);
+        console.log('Raw listingsJson:', [{"about": "dfsfsdf", "address": "100 Dufay Road", "area": "sdf", "baths": "4", "beds": "4", "city": "BRAMPTON", "cityArea": "sf", "community": "sdf", "crossStreet": "sdf", "featured": true, "garages": "4", "listingNo": "1212", "photos": ["listings/1212/360_F_93963870_VnTvQJwqzcI1VuGfS1M9CNl5osnrCuGX.jpg", "listings/1212/12740.jpg", "listings/1212/abstractBG.jpg", "listings/1212/headshot.png"], "postalCode": "L7A 4S3", "price": "$2.00", "propertyType": "condo", "sqft": "45453", "thumbnail": "listings/1212/thumbnail.jpg"}, {"address": "53 lockpeed", "city": "CHENNAI", "postalCode": "L7A 3G4", "price": "999999", "propertyType": "Townhouse", "listingNo": "2131", "listingType": "For Sale", "beds": "1", "baths": "2", "garages": "3", "sqft": "1213", "about": "sdsdfsdfsdfs", "community": "dsfs", "area": "sdfsdf", "crossStreet": "sdfsdf", "cityArea": "sdfsdf", "featured": false, "thumbnail": "listings/2131/thumbnail.jpg", "photos": ["listings/2131/360_F_93963870_VnTvQJwqzcI1VuGfS1M9CNl5osnrCuGX.jpg", "listings/2131/12740.jpg"]}, {"address": "33423", "city": "DSFSFSDF", "postalCode": "df34", "price": "df34234", "propertyType": "sdfsdfsd", "listingNo": "3423", "listingType": "For Sale", "beds": "3", "baths": "34", "garages": "34", "sqft": "3242", "about": "dfsdf", "community": "sdfs", "area": "sdfs", "crossStreet": "sdfsdf", "cityArea": "sdfsd", "featured": false, "thumbnail": "listings/3423/thumbnail.jpg", "photos": ["listings/3423/headshot.png", "listings/3423/headshotBW.png"]}, {"about": "~insert about here~", "address": "2832 Chippawa Road", "area": "Sandwich", "baths": "3", "beds": "4", "city": "WINDSOR", "cityArea": "Windsor", "community": "Sandwich Town", "crossStreet": "Main and Ambassador", "featured": true, "garages": "2", "listingNo": "123112", "listingType": "For Sale", "photos": ["listings/123112/matrixBG.gif", "listings/123112/mjy15.jpg"], "postalCode": "L9A 4S2", "price": "785999", "propertyType": "House", "sqft": "2200", "thumbnail": "listings/123112/thumbnail.jpg"}]);
         try {
-          const listings = [{"about": "dfsfsdf", "address": "100 Dufay Road", "area": "sdf", "baths": "4", "beds": "4", "city": "BRAMPTON", "cityArea": "sf", "community": "sdf", "crossStreet": "sdf", "featured": true, "garages": "4", "listingNo": "1212", "photos": ["listings/1212/360_F_93963870_VnTvQJwqzcI1VuGfS1M9CNl5osnrCuGX.jpg", "listings/1212/12740.jpg", "listings/1212/abstractBG.jpg", "listings/1212/headshot.png"], "postalCode": "L7A 4S3", "price": "$2.00", "propertyType": "condo", "sqft": "45453", "thumbnail": "listings/1212/thumbnail.jpg"}, {"about": "sdfsdf", "address": "A-2/270", "area": "sdfsdf", "baths": "23", "beds": "23", "city": "NEW DELHI", "cityArea": "sdfsd", "community": "sdfsdf", "crossStreet": "sdfsdf", "featured": true, "garages": "23", "listingNo": "34432", "photos": ["listings/34432/360_F_93963870_VnTvQJwqzcI1VuGfS1M9CNl5osnrCuGX.jpg", "listings/34432/12740.jpg"], "postalCode": "110063", "price": "3434", "propertyType": "House", "sqft": "2323", "thumbnail": "listings/34432/thumbnail.jpg"}, {"address": "53 lockpeed", "city": "CHENNAI", "postalCode": "L7A 3G4", "price": "999999", "propertyType": "Townhouse", "listingNo": "2131", "listingType": "For Sale", "beds": "1", "baths": "2", "garages": "3", "sqft": "1213", "about": "sdsdfsdfsdfs", "community": "dsfs", "area": "sdfsdf", "crossStreet": "sdfsdf", "cityArea": "sdfsdf", "featured": false, "thumbnail": "listings/2131/thumbnail.jpg", "photos": ["listings/2131/360_F_93963870_VnTvQJwqzcI1VuGfS1M9CNl5osnrCuGX.jpg", "listings/2131/12740.jpg"]}, {"address": "33423", "city": "DSFSFSDF", "postalCode": "df34", "price": "df34234", "propertyType": "sdfsdfsd", "listingNo": "3423", "listingType": "For Sale", "beds": "3", "baths": "34", "garages": "34", "sqft": "3242", "about": "dfsdf", "community": "sdfs", "area": "sdfs", "crossStreet": "sdfsdf", "cityArea": "sdfsd", "featured": false, "thumbnail": "listings/3423/thumbnail.jpg", "photos": ["listings/3423/headshot.png", "listings/3423/headshotBW.png"]}, {"address": "100 Dufay Roadddd", "city": "BRAMPTON", "postalCode": "L7A 4S3s", "price": "34234", "propertyType": "townhouse", "listingNo": "11", "listingType": "For Sale", "beds": "1", "baths": "2", "garages": "3", "sqft": "23", "about": "dsfsdfsd", "community": "sdfsdfs", "area": "sdfs", "crossStreet": "sdfsdf", "cityArea": "sdfsdf", "featured": false, "thumbnail": "listings/11/thumbnail.jpg", "photos": ["listings/11/abstractBG.jpg"]}];
+          const listings = [{"about": "dfsfsdf", "address": "100 Dufay Road", "area": "sdf", "baths": "4", "beds": "4", "city": "BRAMPTON", "cityArea": "sf", "community": "sdf", "crossStreet": "sdf", "featured": true, "garages": "4", "listingNo": "1212", "photos": ["listings/1212/360_F_93963870_VnTvQJwqzcI1VuGfS1M9CNl5osnrCuGX.jpg", "listings/1212/12740.jpg", "listings/1212/abstractBG.jpg", "listings/1212/headshot.png"], "postalCode": "L7A 4S3", "price": "$2.00", "propertyType": "condo", "sqft": "45453", "thumbnail": "listings/1212/thumbnail.jpg"}, {"address": "53 lockpeed", "city": "CHENNAI", "postalCode": "L7A 3G4", "price": "999999", "propertyType": "Townhouse", "listingNo": "2131", "listingType": "For Sale", "beds": "1", "baths": "2", "garages": "3", "sqft": "1213", "about": "sdsdfsdfsdfs", "community": "dsfs", "area": "sdfsdf", "crossStreet": "sdfsdf", "cityArea": "sdfsdf", "featured": false, "thumbnail": "listings/2131/thumbnail.jpg", "photos": ["listings/2131/360_F_93963870_VnTvQJwqzcI1VuGfS1M9CNl5osnrCuGX.jpg", "listings/2131/12740.jpg"]}, {"address": "33423", "city": "DSFSFSDF", "postalCode": "df34", "price": "df34234", "propertyType": "sdfsdfsd", "listingNo": "3423", "listingType": "For Sale", "beds": "3", "baths": "34", "garages": "34", "sqft": "3242", "about": "dfsdf", "community": "sdfs", "area": "sdfs", "crossStreet": "sdfsdf", "cityArea": "sdfsd", "featured": false, "thumbnail": "listings/3423/thumbnail.jpg", "photos": ["listings/3423/headshot.png", "listings/3423/headshotBW.png"]}, {"about": "~insert about here~", "address": "2832 Chippawa Road", "area": "Sandwich", "baths": "3", "beds": "4", "city": "WINDSOR", "cityArea": "Windsor", "community": "Sandwich Town", "crossStreet": "Main and Ambassador", "featured": true, "garages": "2", "listingNo": "123112", "listingType": "For Sale", "photos": ["listings/123112/matrixBG.gif", "listings/123112/mjy15.jpg"], "postalCode": "L9A 4S2", "price": "785999", "propertyType": "House", "sqft": "2200", "thumbnail": "listings/123112/thumbnail.jpg"}];
           console.log('Parsed listings:', listings);
           let currentListings = [...listings];
           console.log('Initial currentListings:', currentListings);
